Fixed header logo size on tablet

--- a/style.css
+++ b/style.css
@@ -295,3 +295,8 @@ button[type=submit]:hover {
   }
 
 }
+@media only screen and (max-width: 900px) {
+  .header h1 {
+    font-size: 100px;
+  }
+}
